--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Wordle Clone - 5 or 6 letter words</title>
+    <title>(Class War)dle</title>
 
     <script
       async
